backend/recommendation-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  labels:
    app: recommendation-service
spec:
  selector:
    app: recommendation-service
  ports:
    - port: 80
      targetPort: 8012
      protocol: TCP
  type: ClusterIP
